Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/quid/T6999438.out
T6999438.java:8:9: compiler.err.illegal.char: #
1 error
